force-app/main/default/objects/Calendar_Linkage__c/Calendar_Linkage__c.object-meta.xml
<CustomObject>
    <label>Calendar Linkage</label>
    <nameField>
        <label>Calendar Linkage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Linkages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>