force-app/main/default/objects/Calendar_Linkage__c/fields/Andrology__c.field-meta.xml
<CustomField>
    <fullName>Andrology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Andrology</label>
    <type>Checkbox</type>
</CustomField>