force-app/main/default/objects/Calendar_Linkage__c/fields/Blood_Tests__c.field-meta.xml
<CustomField>
    <fullName>Blood_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blood Tests</label>
    <type>Checkbox</type>
</CustomField>