force-app/main/default/objects/Calendar_Linkage__c/fields/Calendar_ID__c.field-meta.xml
<CustomField>
    <fullName>Calendar_ID__c</fullName>
    <label>Calendar ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>