force-app/main/default/objects/Calendar_Linkage__c/fields/Calendar_Owner__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar Owner</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Calendar Linkages</relationshipLabel>
    <relationshipName>Calendar_Linkages</relationshipName>
    <type>Lookup</type>
</CustomField>