force-app/main/default/objects/Calendar_Linkage__c/fields/Interviews__c.field-meta.xml
<CustomField>
    <fullName>Interviews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interviews</label>
    <type>Checkbox</type>
</CustomField>