force-app/main/default/objects/Calendar_Linkage__c/fields/Linked_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Linked_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Calendar Linkages</relationshipLabel>
    <relationshipName>Calendar_Linkages</relationshipName>
    <type>Lookup</type>
</CustomField>