force-app/main/default/objects/Calendar_Linkage__c/fields/OPU_s__c.field-meta.xml
<CustomField>
    <fullName>OPU_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPU&apos;s</label>
    <type>Checkbox</type>
</CustomField>