force-app/main/default/objects/Calendar_Linkage__c/fields/Scans__c.field-meta.xml
<CustomField>
    <fullName>Scans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scans</label>
    <type>Checkbox</type>
</CustomField>