force-app/main/default/objects/Calendar_Linkage__c/fields/Transfers__c.field-meta.xml
<CustomField>
    <fullName>Transfers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfers</label>
    <type>Checkbox</type>
</CustomField>