force-app/main/default/objects/Calendar_Linkage__c/listViews/All_Linkages.listView-meta.xml
<ListView>
    <fullName>All_Linkages</fullName>
    <columns>NAME</columns>
    <columns>Andrology__c</columns>
    <columns>Blood_Tests__c</columns>
    <columns>Interviews__c</columns>
    <columns>OPU_s__c</columns>
    <columns>Scans__c</columns>
    <columns>Transfers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Linkages</label>
</ListView>